# hailors

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  README.md  build.rs  install.sh  output.csv
images/: dog.rgb  person.rgb
src/: custom_wrapper.cpp  custom_wrapper.hpp  device_api_wrapper.cpp  device_api_wrapper.hpp  hef_api_wrapper.cpp  hef_api_wrapper.hpp  lib.rs  main.rs  mod.rs  network.rs  network_api_wrapper.cpp  network_api_wrapper.hpp  status.rs
src/hef/: config_buffer.rs  context_metadata.rs  context_switch_actions.rs  core_op_metadata.rs  hailo_common.rs  hailo_format.rs  hef.rs  layer_info.rs  layer_utils.rs  mod.rs  nn_stream_config.rs  proto_hef.rs  seekable_bytes_reader.rs  stream_info.rs  supported_features.rs  vdma_channel.rs
test/: test_device_api_wrapper.cpp
tests/: hef_test.rs  lib_test.rs
tests/c++/: test_device_api_wrapper.cpp
