[package]
name = "hailors"
version = "0.1.0"
edition = "2021"
authors = ["Maarten Ectors <maarten@profitgrowinginnovator.com>"] 
description = "A Rust crate for interfacing with Hailo hardware using FFI bindings."
homepage = "https://github.com/profitgrowinginnovator/hailors" 
repository = "https://github.com/profitgrowinginnovator/hailors" 
documentation = "https://docs.rs/hailors" # for online documentation
license = "MIT"
keywords = ["FFI", "Hailo", "hardware", "bindings", "Rust", "C++"]
categories = ["embedded", "hardware-support", "scientific-computing"]
build = "build.rs"
readme = "README.md" # include the readme for crates.io
exclude = ["tests/", "hef/*"] 

[dependencies]
autocxx = { version = "0.27.1", optional = true }

# These dependencies are required for FFI and autocxx integration
cxx = "1.0.136"
anyhow = "1.0.95"
clap = "4.5.26"
once_cell = "1.20.2"

# Include dependencies needed for build.rs to function
[build-dependencies]
cc = "1.2.7"

[features]
default = ["autocxx"]
test-linking = ["autocxx"]

#[package.metadata]
#include = ["src/lib.rs", "build.rs"]

[profile.dev]
#incremental = false
debug = true

[package.metadata.docs.rs]
all-features = true

[lib]
crate-type = ["rlib", "cdylib"]
name = "hailors"
path = "src/lib.rs"


[[bin]]
name = "example"  # You can change this name to something meaningful
path = "src/main.rs"
