[package]
name = "hailors"
version = "0.1.0"
edition = "2021"
authors = ["Maarten Ectors <maarten@profitgrowinginnovator.com>"] 
description = "A Rust crate for interfacing with Hailo hardware using FFI bindings."
homepage = "https://github.com/profitgrowinginnovator/hailors" 
repository = "https://github.com/profitgrowinginnovator/hailors" 
documentation = "https://docs.rs/hailors" # For online documentation
license = "MIT"
keywords = ["FFI", "Hailo", "hardware", "bindings", "Rust", "C++"]
categories = ["embedded", "hardware-support", "scientific-computing"]
build = "build.rs"
readme = "README.md" # Include the readme for crates.io
exclude = ["tests/", "hef/*"] 

[dependencies]
cxx = "1.0.136"          # For Rust-to-C++ bindings
anyhow = "1.0.95"        # Error handling
clap = { version="4.5.26", features = ["derive"] } # CLI argument parsing
once_cell = "1.20.2"     # Lazy static initialization
lazy_static = "1.5.0"    # Static initialization
libc = "0.2.169"

[build-dependencies]
cc = "1.2.7"             # C++ build tool integration

[profile.dev]
debug = true

[package.metadata.docs.rs]
all-features = true

[lib]
crate-type = ["rlib", "cdylib"]  # For both Rust library and C ABI-compatible library
name = "hailors"
path = "src/lib.rs"

[[bin]]
name = "hailors-cli" # This will be the CLI binary name
path = "src/main.rs"
